--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
         <link rel="stylesheet" type="text/css" href="public/css/styles.css">
         <link href="node_modules/c3/c3.css" rel="stylesheet">
-		<title>Marfeel Charts</title>
+		<title>JS Charts with CS3</title>
 	</head>
     <body>
 		<script src="dist/app.js" ></script>
